html cleanup and header css

--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic-Portfolio</title>
     <link rel="css/stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div>Marlo-Adrian Carreon</div>
+        <div id="navName">Marlo Carreon</div>
         <nav>
             <a href="index.html">About</a>
             <a href="portfolio.html">Portfolio</a>
