--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <title>Basic-Portfolio</title>
 </head>
 <body>
     <header>
-        <div>Marlo-Adrian Carreon</div>
-        <nav>
-            <a href="#">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
+        <div id="navName">Marlo Carreon</div>
+        <nav>  
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a>    </li>
+            </ul>          
         </nav>    
     </header>   
     <section>
