--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="css/stylesheet" href="assets/css/style.css"
+    <link rel="css/stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <title>Basic-Portfolio</title>
 </head>
 <body>
     <header>
-        <div>Marlo-Adrian Carreon</div>
+        <div id="navName">Marlo Carreon</div>
             <nav>
                 <a href="index.html">About</a>
                 <a href="#">Portfolio</a>
