added more css and finished section area

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
         <nav>  
             <ul>
                 <li><a href="#">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a>    </li>
+                <li><a href="portfolio.html" id="portNav">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>          
         </nav>    
     </header>   
     <section>
         <h1>About Me</h1>
-        <img src="#" alt=""/>
-        <p></p>
-        <p></p>
-        <p></p>
+        <hr>
+        <div class="sectContent">
+            <img src="assets/images/prof.png" alt="Marlo Carreon's profile picture"/>
+            <p>Hello I'm Marlo-Adrian, and I have been programming as a hobby since college, which turned into my major. It has been a long road, but I'm excited to learn even more. When I'm not at home, I'm usually out to eat or at the gym to balance that out. I enjoy cooking my meals and trying out exciting new recipes. I can't wait to start building cool looking web apps!</p>
+        </div>    
     </section>
 </body>
 </html>
