--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic-Portfolio</title>
-    <link rel="css/stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="navName">Marlo Carreon</div>
         <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="#">Contact</a>
-        </nav>    
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html" id="portNav">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>  
+        </nav>     
     </header>  
     <section>
         <h1>Contact</h1>
-        <form>
+        <hr>
+        <form class="sectContent">
             Name: <br>
             <input type="text" name="name"/><br>
             Email: <br>
