--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="css/stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <title>Basic-Portfolio</title>
 </head>
 <body>
     <header>
         <div id="navName">Marlo Carreon</div>
-            <nav>
-                <a href="index.html">About</a>
-                <a href="#">Portfolio</a>
-                <a href="contact.html">Contact</a>
-            </nav>    
+        <nav>
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="#" id="portNav">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>  
+        </nav>    
     </header>  
     <section>
         <h1>Portfolio</h1>
-        <div>
+        <hr>
+        <div class="sectContent">
             <a><img src="#" alt=""/></a>
             <a><img src="#" alt=""/></a>
             <a><img src="#" alt=""/></a>
