finished out css and included footer

--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,21 @@
     <section>
         <h1>Contact</h1>
         <hr>
-        <form class="sectContent">
-            Name: <br>
-            <input type="text" name="name"/><br>
-            Email: <br>
-            <input type="text" name="email"/><br>
-            Message: <br>
-            <input type="text" name="message"/><br>
-            <input type="submit" name="submit"/>
+        <form>
+            <div class="sectContact">
+                Name: <br>
+                <input type="text" name="name" class="textInput"/><br>
+                Email: <br>
+                <input type="text" name="email" class="textInput"/><br>
+                Message: <br>
+                <input type="text" name="message" class="textInput msg"/><br>
+            </div>
+            <input type="submit" name="submit" class="textSubmit"/>
         </form>
     </section>
+    <footer>
+        <hr class="footLine">
+        <div class="footText">Copyright ©</div>
+    </footer>
 </body>
 </html>
