--- a/portfolio.html
+++ b/portfolio.html
@@ -23,13 +23,17 @@
         <h1>Portfolio</h1>
         <hr>
         <div class="sectContent">
-            <a><img src="#" alt=""/></a>
-            <a><img src="#" alt=""/></a>
-            <a><img src="#" alt=""/></a>
-            <a><img src="#" alt=""/></a>
-            <a><img src="#" alt=""/></a>
-            <a><img src="#" alt=""/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
         </div>
     </section>
+    <footer>
+        <hr class="footLine">
+        <div class="footText">Copyright ©</div>
+    </footer>
 </body>
 </html>
