--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
             <p>Hello I'm Marlo-Adrian, and I have been programming as a hobby since college, which turned into my major. It has been a long road, but I'm excited to learn even more. When I'm not at home, I'm usually out to eat or at the gym to balance that out. I enjoy cooking my meals and trying out exciting new recipes. I can't wait to start building cool looking web apps!</p>
         </div>    
     </section>
+    <footer>
+        <hr class="footLine">
+        <div class="footText">Copyright ©</div>
+    </footer>
 </body>
 </html>
