--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,12 @@
         <h1>Portfolio</h1>
         <hr>
         <div class="sectContent">
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
-            <a><img src="https://picsum.photos/250/200" class="portImage"/></a>
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>         
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>  
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>  
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>  
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>  
+            <a><img src="https://picsum.photos/250/200" class="portImage" alt="portfolio website"/></a>  
         </div>
     </section>
     <footer>
