--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id="navName">Marlo Carreon</div>
+        <a href="index.html" id="navNameLink"><div id="navName">Marlo Carreon</div></a>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
