--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id="navName">Marlo Carreon</div>
+        <a href="#" id="navNameLink"><div id="navName">Marlo Carreon</div></a>
         <nav>  
             <ul>
                 <li><a href="#">About</a></li>
