--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id="navName">Marlo Carreon</div>
+        <a href="index.html" id="navNameLink"><div id="navName">Marlo Carreon</div></a>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
