--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" id="navNameLink"><div id="navName">Marlo Carreon</div></a>
+        <div id="navName">Marlo Carreon</div>
         <nav>
             <ul>
                 <li><a href="index.html">About</a></li>
